Fix overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,7 @@ html, body {
     width: 100%;
     margin: 0 auto;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 #app {
